--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="cerca_de_ti">cerca de ti</string>
     <string name="login">Login</string>
     <string name="register">Register</string>
+    <string name="mis_eventos">Mis Eventos</string>
+    <string name="agregar_evento">Agregar Evento</string>
 
     <string-array name="user_type">
         <item>Tipo de usuario</item>
